--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New Blog</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', blogs_path %>
+<div class="child row">
+  <div class="wrapper col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+    <div class="blog-text">
+      <p class="left"><strong>タイトル</strong></p>
+      <p class="left"><%= @blog.title %></p>
+      <p class="left"><strong>内容</strong></p>
+      <p class="left"><%= @blog.content %></p>
+      <p class="right">
+      </p>
+    </div>
+    <p>コメント一覧</p>
+    <div id="comments_area">
+    </div>
+    <% if current_user.id == @blog.user_id %>
+      <%= link_to '編集', edit_blog_path(@blog) %> |
+    <% end %>
+    <%= render 'form' %>
+    <%= link_to '戻る', blogs_path %>
+  </div>
+</div>
